[package]
name = "nopetgraph"
version = "0.5.1"
license = "MIT/Apache-2.0"
authors = [
    "bluss",
    "mitchmindtree",
    "sorpaas",
]

description = "Graph data structure library. Provides graph types and graph algorithms."
documentation = "https://docs.rs/nopetgraph/"
repository = "https://github.com/outwork/nopetgraph"

keywords = ["data-structure", "graph", "unionfind", "graph-algorithms"]
categories = ["data-structures"]

edition = "2018"

[lib]
name = "petgraph"
bench = false

[profile.bench]
debug = true

[dependencies]
fixedbitset = { version = "0.3.0", default-features = false }
quickcheck = { optional = true, version = "0.8", default-features = false }
indexmap = { version = "1.6.1", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.5.5"
odds = { version = "0.2.19" }
defmac = "0.1"
itertools = { version = "0.8", default-features = false }

[features]
default = ["graphmap", "stable_graph", "matrix_graph", "std"]
std = ["fixedbitset/std", "serde/std"]
graphmap = ["indexmap"]
serde-1 = ["serde_derive"]
stable_graph = []
matrix_graph = []

# For unstable features
generate = []
unstable = ["generate"]

# feature flags for testing use only
all = ["unstable", "quickcheck", "matrix_graph", "stable_graph", "graphmap"]

[workspace]
members = ["serialization-tests"]

[package.metadata.docs.rs]
features = ["serde-1", "quickcheck"]

[package.metadata.release]
no-dev-version = true